Info overlays finalised. Issues with taskboard scrollbar fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 .hidden {
   display: none;
   visibility: hidden;
-  opacity: 0; }
+  opacity: 0;
+  transition: all 0.2s; }
 
 @keyframes rotateOutline {
   50% {
@@ -72,10 +73,7 @@ p {
 .logo {
   order: 2;
   width: 15rem;
-  margin: 0 auto;
-  transition: all 0.2s ease-in; }
-  .logo:hover {
-    transform: scale(1.05); }
+  margin: 0 auto; }
 
 .task-timeline {
   height: 100%;
@@ -459,8 +457,30 @@ p {
   margin: 1rem;
   height: 3rem;
   width: 3rem;
-  background-color: red;
   cursor: pointer; }
+
+.overlay-btn-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%; }
+
+.overlay-btn {
+  height: 4rem;
+  width: 40%;
+  font-size: 2rem;
+  font-weight: 700;
+  color: #ffffff;
+  transition: all 0.2s;
+  cursor: pointer; }
+  .overlay-btn:hover {
+    transform: scale(1.1); }
+  .overlay-btn:active {
+    transform: scale(1.025); }
+  .overlay-btn--yes {
+    background-color: red; }
+  .overlay-btn--no {
+    background-color: green; }
 
 .nav-bar {
   position: fixed;
@@ -498,21 +518,10 @@ p {
   width: 100%;
   padding-top: 12rem;
   padding-left: 2rem;
-  padding-bottom: 2rem;
-  background-color: #131313;
-  background-repeat: repeat;
-  overflow-x: unset;
+  padding-bottom: 5rem;
+  background-color: var(--color-darker);
+  overflow-x: scroll;
   overflow-y: hidden; }
-  .task-board::before {
-    position: fixed;
-    left: 0;
-    top: 0;
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-image: url(../img/email-pattern.png);
-    background-repeat: repeat;
-    opacity: 0.15; }
 
 .focus-overlay {
   position: fixed;
@@ -530,13 +539,13 @@ p {
   top: 50%;
   transform: translate(-50%, -50%);
   z-index: 50;
-  max-height: 90%;
-  max-width: 95%;
+  max-height: 75%;
+  max-width: 80%;
   padding: 2rem;
   border: 4px solid #000000;
   border-radius: 4px;
   background-color: #ffffff;
-  opacity: 0.75;
+  opacity: 0.9;
   box-shadow: 15px 15px 5px 0px rgba(0, 0, 0, 0.75);
   overflow-y: scroll; }
   .info-overlay > h2 {
@@ -550,7 +559,9 @@ h2 {
   font-weight: 700; }
 
 .answer {
-  font-style: italic; }
+  font-style: italic;
+  padding-bottom: 0.75rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.65); }
 
 /*
   All a user has to do to change the calendar size is
