--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -9,4 +9,6 @@ h2 {
 
 .answer {
   font-style: italic;
+  padding-bottom: 0.75rem;
+  border-bottom: 1px solid rgba(#000000, 0.65);
 }
