--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -34,4 +34,5 @@
   display: none;
   visibility: hidden;
   opacity: 0;
+  transition: all 0.2s;
 }
